# numy

./: Cargo.toml  README.md
src/: binary.rs  bit.rs  float.rs  int.rs  integer.rs  lib.rs  min_max.rs  num.rs  number.rs  number_util.rs  signed.rs  signed_integer.rs  unsigned_integer.rs  util.rs
src/bit/: bit.rs  bit_assign_ops.rs  bit_ops.rs
src/float/: float.rs  float_const.rs
src/int/: int.rs  signed_int.rs  unsigned_int.rs
src/num/: num.rs  num_assign_ops.rs  num_ops.rs  num_ord.rs
