[package]
name = "numy"
version = "0.2.0"
edition = "2021"
authors = ["Joseph Soderquist"]
description = "Trait boundaries for primitive Rust types"
repository = "https://github.com/jsode64/numy"
documentation = "https://docs.rs/numy"
readme = "README.md"
license = "MIT"
keywords = ["numerics", "traits", "math", "mathematics"]

[dependencies]

[features]
"ex" = []
